fixed README.md; enabled overflow hidden in default.css

--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
 body {
-	/*overflow-x: hidden;*/
-	/*overflow-y: hidden;*/
+	overflow-x: hidden;
+	overflow-y: hidden;
 	margin: 0;
 	padding: 0;
 }
